--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="vieweport" content="width=device-width, intital-scale=1.0">
     <title>Marvel Characters team Page</title> 
-    <link rel="stylesheet" href="css/main/css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -24,51 +24,56 @@
     </header>
 
     <main>
-        <nav id="character-nav"></nav>
+        <nav id="character-nav">
             <h2 class="hidden">Character Nav</h2>
-            <ul>
-                <li>
+            <ul class="characters">
+                <li id="cap">
                     <div class="img-wrapper">
                         <img src="images/cap.jpeg" alt="Captain America">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
-                <li>
+                <li id="carol">
                     <div class="img-wrapper">
                         <img src="images/carol.jpeg" alt="Carol">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
-                <li>
+                <li id="clint">
                     <div class="img-wrapper">
                         <img src="images/clint.jpeg" alt="Clint">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
-                <li>
+                <li id="hulk">
                     <div class="img-wrapper">
                         <img src="images/hulk.jpeg" alt="Hulk">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
-                <li>
+                <li id="thor">
                     <div class="img-wrapper">
                         <img src="images/thor.jpeg" alt="Thor">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
-                <li>
+                <li id="widow">
                     <div class="img-wrapper">
                         <img src="images/widow.jpeg" alt="Black Widow">
                     </div>
                     <input type="checkbox"><span>Pick Me!</span>
                 </li>
             </ul>
+            </nav>
+            <article>
+                <h3>Pick Your Stickers!</h3>
+                <p>Use the checkbox to add your picks to your cart!</p>
+            </article>
 
     </main>
 
-    <footer>
-
+    <footer class="sticky_footer">
+        <h3>All Images &copy; Marvel</h3>
     </footer>
 </body>
 
